<resources>
    <string name="app_name">StudTest</string>
    <string name="email_adress">Email Address</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="registration">Registration</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="course">Course</string>
    <string name="groupNumber">groupNumber</string>
    <string name="add_test_button">Add Test Button</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="add">Add</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout_button">Logout button</string>
    <string name="textview">TextView</string>
    <string name="enter_test_name">Enter test name</string>
    <string name="enter_group_number">Enter group number</string>
    <string name="test_name">Test Name</string>
    <string name="question_text">Question text</string>
    <string name="correct_answer">Correct answer</string>
    <string name="incorrect_answer">Incorrect answer</string>
    <string name="back_button">back button</string>
    <string name="done_button">done button</string>
    <string name="new_question_button">new question button</string>
    <string name="solve_test">solve test</string>
    <string name="firebaseURL">https://studtest-a7bd0-default-rtdb.europe-west1.firebasedatabase.app</string>
</resources>